# near-email

./: .env.testnet.example  .gitignore  CLAUDE.md  DEPLOY.md  DEV.md  PROJECT.md  README.md  docker-compose.testnet.yml  docker-compose.yml  restart.sh
db-api/: .env.example  Cargo.toml  Dockerfile
db-api/migrations/: 20260101000001_initial_schema.sql  20260123000001_add_attachments_table.sql  20260126000001_add_invites.sql  20260126000002_add_blacklist_and_stats.sql  20260130000001_add_poll_tokens.sql
db-api/src/: crypto.rs  main.rs
scripts/: generate_keys.sh  keygen.rs
smtp-server/: .env.example  Cargo.toml  Dockerfile  build.sh
smtp-server/src/: crypto.rs  db.rs  handler.rs  main.rs
wasi-near-email-ark/: Cargo.toml  build.sh
wasi-near-email-ark/.cargo/: config.toml
wasi-near-email-ark/src/: crypto.rs  db.rs  http_chunked.rs  main.rs  near.rs  types.rs
web-ui/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
web-ui/public/: site.webmanifest
web-ui/src/components/: ComposeModal.tsx  EmailList.tsx  EmailView.tsx  InviteCodeModal.tsx  InvitesModal.tsx  KeyCreationFlowModal.tsx  LimitsModal.tsx  SentEmailList.tsx  SentEmailView.tsx  Toast.tsx
web-ui/src/lib/: near.ts
web-ui/src/pages/: _app.tsx  dev.tsx  docs.tsx  index.tsx
web-ui/src/pages/api/outlayer/: [...path].ts
web-ui/src/styles/: globals.css
