[package]
name = "wasi-near-email-ark"
version = "0.1.0"
edition = "2021"
description = "OutLayer WASI module for near.email - decrypts emails for NEAR account owners"

[[bin]]
name = "wasi-near-email-ark"
path = "src/main.rs"

[dependencies]
# OutLayer SDK
outlayer = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for WASI P2
wasi-http-client = "0.2"

# Cryptography
secp256k1 = { version = "0.29", features = ["global-context"] }
ecies = "0.2"
sha2 = "0.10"
hex = "0.4"

# NEAR signature verification
ed25519-dalek = "2.1"
bs58 = "0.5"
base64 = "0.21"

# Email parsing
mailparse = "0.15"

[profile.release]
opt-level = "s"
lto = true
strip = true
